--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "bootstrap": "^5.3.0-alpha3",
     "sass": "^1.62.0",
     "update": "^0.7.4",
-    "vue": "^3.2.47"
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
-    "vite": "^4.3.0"
+    "vite": "^4.3.3"
   }
 }
